# Carnival

./: .gitignore  CMakeLists.txt  functions.h  imgui-style.h  imgui.ini  main.cpp  vcpkg.json
core/: init.cpp  init.h  window.cpp  window.h
src/: main.cpp
src/common/: functions.h  global.h  img.h  imgui-style.h  shader.h
src/core/: Application.cpp  Application.h
src/shader/: test.frag
